--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "5.2",
+    "swiper": "^11.1.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
